Updated ImageJ to version 1.53q3