@@ -240,7 +240,7 @@ public class GenericDialog extends Dialog implements ActionListener, TextListene
 		tf.addFocusListener(this);
 		tf.addKeyListener(this);
 		numberField.addElement(tf);
-		defaultValues.addElement(new Double(defaultValue));
+		defaultValues.addElement(Double.valueOf(defaultValue));
 		defaultText.addElement(tf.getText());
 		c.gridx = GridBagConstraints.RELATIVE;
 		c.anchor = GridBagConstraints.WEST;
@@ -778,7 +778,7 @@ public class GenericDialog extends Dialog implements ActionListener, TextListene
 		add(thisChoice, c);
 		choice.addElement(thisChoice);
 		int index = thisChoice.getSelectedIndex();
-		defaultChoiceIndexes.addElement(new Integer(index));
+		defaultChoiceIndexes.addElement(Integer.valueOf(index));
 		if (Recorder.record || macro)
 			saveLabel(thisChoice, label);
 	}
@@ -1022,10 +1022,10 @@ public class GenericDialog extends Dialog implements ActionListener, TextListene
 		tf.addFocusListener(this);
 		tf.addKeyListener(this);
 		numberField.addElement(tf);
-		sliderIndexes.add(new Integer(numberField.size() - 1));
-		sliderScales.add(new Double(scale));
-		sliderDigits.add(new Integer(digits));
-		defaultValues.addElement(new Double(defaultValue / scale));
+		sliderIndexes.add(Integer.valueOf(numberField.size() - 1));
+		sliderScales.add(Double.valueOf(scale));
+		sliderDigits.add(Integer.valueOf(digits));
+		defaultValues.addElement(Double.valueOf(defaultValue / scale));
 		defaultText.addElement(tf.getText());
 		tf.setEditable(true);
 		firstSlider = false;
@@ -1342,7 +1342,7 @@ public class GenericDialog extends Dialog implements ActionListener, TextListene
 	protected Double getValue(String text) {
 		Double d;
 		try {
-			d = new Double(text);
+			d = Double.valueOf(text);
 		} catch (NumberFormatException e) {
 			d = null;
 		}
